\name{NEWS}
\title{News for package `pomp'}
\section{Changes in \pkg{pomp} version 1.5.3}{
  \itemize{
    \item More improvements to the test suite.
    \item Fixed bugs found as a result of improved testing.
    \item Fixed bug in specification of skeleton in pompExamples.
  }
}
\section{Changes in \pkg{pomp} version 1.5.2}{
  \itemize{
    \item Improved the test suite to obtain better code coverage.
    \item \code{pomp} is no longer an S4 method.
    Its new status as an ordinary function abbreviates and consolidates the code and simplifies the documentation.
    \item Some minor improvements to error messages.
    \item A bug restricting access in C code to \code{userdata} has been fixed.
    \item Fixed bug in \code{pompExample(...,show=TRUE)}.
  }
}
\section{Changes in \pkg{pomp} version 1.5.1}{
  \itemize{
    \item New methods for the Ensemble Kalman Filter (\code{enkf}) and Ensemble Adjustment Kalman Filter (\code{eakf}) have been added to the package.
  }
}
\section{Changes in \pkg{pomp} version 1.4.9}{
  \itemize{
    \item A better interface for specifying a model's deterministic skeleton is provided.
    One specifies \code{skeleton=map(f,delta.t)} for a discrete-time skeleton (a map) and \code{skeleton=vectorfield(f)} for a continuous-time skeleton (a vectorfield).
    The old arguments \code{skeleton.type} and \code{skelmap.delta.t} are deprecated and will be removed in a future release.
    \item The \code{pfilter} help page has been improved.
    Specifically, the discussion of filtering failures is better.
    \item Miscellaneous improvements to the help pages.
  }
}
\section{Changes in \pkg{pomp} version 1.4.8}{
  \itemize{
    \item \code{mif2} no longer computes filter means.
  }
}
\section{Changes in \pkg{pomp} version 1.4.7}{
  \itemize{
    \item The new argument \code{show} of \code{pompExamples} allows one to display the example code instead of executing it.
    \item The minimum version of \R supported is now 3.1.2.
  }
}