@@ -7,8 +7,6 @@ R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
 Type 'license()' or 'licence()' for distribution details.
 
-  Natural language support but running in an English locale
-
 R is a collaborative project with many contributors.
 Type 'contributors()' for more information and
 'citation()' on how to cite R or R packages in publications.
@@ -46,21 +44,21 @@ function (xstart, times, params, ..., zeronames = character(0),
         method = 2L, zeronames = zeronames, tcovar = tcovar, 
         covar = covar, args = pairlist(...), gnsi = .getnativesymbolinfo)
 }
-<environment: 0x2613930>
+<environment: 0x3497750>
 process model density, dprocess = 
 function (x, times, params, log = FALSE, ...) 
 stop(sQuote("dprocess"), " not specified", call. = FALSE)
-<environment: 0x246ada8>
+<environment: 0x3427788>
 measurement model simulator, rmeasure = 
-native function ‘_gompertz_normal_rmeasure’
+native function '_gompertz_normal_rmeasure'
 measurement model density, dmeasure = 
-native function ‘_gompertz_normal_dmeasure’
+native function '_gompertz_normal_dmeasure'
 prior simulator, rprior = 
 function not specified
 prior density, dprior = 
-native function ‘_pomp_default_dprior’, dynamically loaded from ‘pomp’
+native function '_pomp_default_dprior', dynamically loaded from 'pomp'
 skeleton ( map ) = 
-native function ‘_gompertz_skeleton’
+native function '_gompertz_skeleton'
 initializer = 
 function not specified
 parameter transformation (to estimation scale) = 
@@ -68,20 +66,20 @@ function (params, ...)
 {
     log(params)
 }
-<environment: 0x1185c70>
+<environment: 0x3376920>
 parameter transformation (from estimation scale) = 
 function (params, ...) 
 {
     exp(params)
 }
-<environment: 0x1185c70>
+<environment: 0x3376920>
 parameter(s):
     K     r sigma   tau   X.0 
   1.0   0.1   0.1   0.1   1.0 
 > print(gompertz@rmeasure)
-native function ‘_gompertz_normal_rmeasure’
+native function '_gompertz_normal_rmeasure'
 > print(gompertz@dmeasure)
-native function ‘_gompertz_normal_dmeasure’
+native function '_gompertz_normal_dmeasure'
 > print(gompertz@rprocess)
 function (xstart, times, params, ..., zeronames = character(0), 
     tcovar, covar, .getnativesymbolinfo = TRUE) 
@@ -91,7 +89,7 @@ function (xstart, times, params, ..., zeronames = character(0),
         method = 2L, zeronames = zeronames, tcovar = tcovar, 
         covar = covar, args = pairlist(...), gnsi = .getnativesymbolinfo)
 }
-<environment: 0x2613930>
+<environment: 0x3497750>
 > 
 > po <- gompertz
 > coef(po)
@@ -116,6 +114,13 @@ function (xstart, times, params, ..., zeronames = character(0),
 > guess <- coef(po)
 > coef(po) <- numeric(0)
 > coef(po,transform=TRUE) <- partrans(po,guess,dir='to')
+> coef(po) <- numeric(0)
+> coef(po,c("K","r","sigma","tau","X.0"),
++      transform=TRUE) <- partrans(po,guess,dir='to')
+Warning message:
+in 'coef<-' names of 'value' are being discarded 
+> coef(po) <- numeric(0)
+> coef(po,c("K","r","sigma","tau","X.0")) <- unname(guess)
 > coef(po) <- numeric(0)
 > coef(po) <- guess
 > guess["r"] <- 0
@@ -154,8 +159,8 @@ function (xstart, times, params, ..., zeronames = character(0),
 +         rw.sd=c(r=0.02,K=0.02)
 +     )
 + )
-Error : ‘mif’ cannot estimate non-finite parameters.
-The following transformed parameters are non-finite: ‘r’
+Error : 'mif' cannot estimate non-finite parameters.
+The following transformed parameters are non-finite: 'r'
 > 
 > set.seed(93848585L)
 > mf <- mif(
@@ -251,4 +256,4 @@ iteration loglik     r
 > 
 > proc.time()
    user  system elapsed 
-  1.960   0.164   2.280 
+   1.96    0.14    2.06 
