@@ -30,6 +30,34 @@ newly created object(s):
 > guess1[c('x1.0','x2.0','alpha.2','alpha.3')] <- 0.5*guess1[c('x1.0','x2.0','alpha.2','alpha.3')]
 > guess2[c('x1.0','x2.0','alpha.2','alpha.3')] <- 1.5*guess1[c('x1.0','x2.0','alpha.2','alpha.3')]
 > 
+> try(mif2(ou2,Nmif=10,start=guess2,
++          cooling.type="hyperbolic",cooling.fraction.50=0.05,
++          rw.sd=rw.sd(
++              x1.0=ivp(0.5),x2.0=ivp(0.5),
++              alpha.2=0.1,alpha.3=0.1)) -> ignore)
+Error : 'mif2' error: 'Np' must be specified
+> try(mif2(ou2,Nmif=1,start=guess2,Np=rep(10,102),
++          cooling.type="hyperbolic",cooling.fraction.50=0.05,
++          rw.sd=rw.sd(
++              x1.0=ivp(0.5),x2.0=ivp(0.5),
++              alpha.2=0.1,alpha.3=0.1)) -> ignore)
+Warning messages:
+1: in 'mif2': Np[k] ignored for k > ntimes 
+2: 1 filtering failure occurred in 'mif2.pfilter' 
+> try(mif2(ou2,Nmif=1,start=guess2,Np=seq_len(101),
++          cooling.type="hyperbolic",cooling.fraction.50=0.05,
++          rw.sd=rw.sd(
++              x1.0=ivp(0.5),x2.0=ivp(0.5),
++              alpha.2=0.1,alpha.3=0.1)) -> ignore)
+Warning message:
+in 'mif2': Np[k] ignored for k > ntimes 
+> try(mif2(ou2,Nmif=0,start=guess2,Np=1000,
++          cooling.type="hyperbolic",cooling.fraction.50=0.05,
++          rw.sd=rw.sd(
++              x1.0=ivp(0.5),x2.0=ivp(0.5),
++              alpha.2=0.1,alpha.3=0.1)) -> ignore)
+Error : 'mif2' error: 'Nmif' must be a positive integer
+> 
 > m1 <- mif2(ou2,Nmif=100,start=guess1,Np=1000,
 +            cooling.type="hyperbolic",cooling.fraction.50=0.05,
 +            rw.sd=rw.sd(
@@ -42,13 +70,25 @@ newly created object(s):
 +              x1.0=ivp(0.5),x2.0=ivp(0.5),
 +              alpha.2=0.1,alpha.3=0.1))
 > m2 <- continue(m2,Nmif=50)
+> try(continue(m2,Nmif=50,rw.sd=rw.sd(beta=0.1,alpha.2=0.1)))
+Error : 'mif2' error: the following parameter(s), which are supposed to be estimated, are not present: 'beta'
+> try(continue(m2,Nmif=50,rw.sd=rw.sd(alpha.2=rep(0.1,3))))
+Error : 'mif2' error: 'rw.sd' spec for parameter 'alpha.2' does not evaluate to a vector of the correct length (100)
 > 
-> plot(m1)
-> plot(m12 <- c(m1,m2))
-> coef(m12)
+> plot(m1,y=NA)
+Warning message:
+In plot(m1, y = NA) : 'NA' is ignored
+> dim(coef(c(m1)))
+[1]  1 10
+> plot(m12 <- c(m1,m2),y=33)
+Warning message:
+In plot(m12 <- c(m1, m2), y = 33) : '33' is ignored
+> coef(c(m12))
      alpha.1 alpha.2 alpha.3 alpha.4 sigma.1 sigma.2 sigma.3 tau  x1.0 x2.0
-[1,]     0.8  -0.571   0.329     0.9       3    -0.5       2   1 -2.75 2.12
-[2,]     0.8  -0.528   0.325     0.9       3    -0.5       2   1 -2.73 4.99
+[1,]     0.8  -0.460   0.329     0.9       3    -0.5       2   1 -2.09 1.84
+[2,]     0.8  -0.599   0.255     0.9       3    -0.5       2   1 -3.42 3.96
+> dim(coef(m12))
+[1]  2 10
 > dim(coef(c(m12,m12)))
 [1]  4 10
 > dim(coef(c(m12,m1)))
@@ -57,18 +97,22 @@ newly created object(s):
 [1]  3 10
 > dim(coef(m12[2]))
 [1]  1 10
+> sapply(conv.rec(m12),dim)
+     [,1] [,2]
+[1,]  101  101
+[2,]   12   12
 > 
 > rbind(mle1=c(coef(m1),loglik=logLik(pfilter(m1,Np=1000))),
 +       mle2=c(coef(m2),loglik=logLik(pfilter(m1,Np=1000))),
 +       truth=c(coef(ou2),loglik=logLik(pfilter(m1,Np=1000))))
       alpha.1 alpha.2 alpha.3 alpha.4 sigma.1 sigma.2 sigma.3 tau  x1.0 x2.0
-mle1      0.8  -0.571   0.329     0.9       3    -0.5       2   1 -2.75 2.12
-mle2      0.8  -0.528   0.325     0.9       3    -0.5       2   1 -2.73 4.99
+mle1      0.8  -0.460   0.329     0.9       3    -0.5       2   1 -2.09 1.84
+mle2      0.8  -0.599   0.255     0.9       3    -0.5       2   1 -3.42 3.96
 truth     0.8  -0.500   0.300     0.9       3    -0.5       2   1 -3.00 4.00
       loglik
-mle1    -479
-mle2    -479
-truth   -481
+mle1    -481
+mle2    -482
+truth   -482
 > 
 > m3 <- mif2(ou2,Nmif=3,start=guess1,Np=200,
 +            cooling.fraction=0.2,
@@ -123,4 +167,4 @@ null device
 > 
 > proc.time()
    user  system elapsed 
- 18.984   0.152  19.219 
+ 19.216   0.156  19.451 
